--- a/index.html
+++ b/index.html
@@ -21,9 +21,16 @@
 <img src="/Portfolio/photo.jpg" height="300"/> <br>
 <hr>
 <pre >
-Hello everyone, This is Sachin. I currently persuing my B.E. in Computer Science from KLE tech Hubli.
-I did my schooling from St. Mary's High School, camp belgaum. While at school I was a part of NCC,
-Scouts and guides and differnt clubs. I did by Pre-university Education from RL PU college of Science,
+Hello everyone, This is Sachin. 
+I currently persuing my BE 
+in Computer Science from KLE 
+Tech Hubli.I did my schooling 
+from St. Mary's High School, 
+camp belgaum. While at school 
+I was a part of NCC,
+Scouts and guides and differnt clubs.
+ I did by Pre-university Education 
+ from RL PU college of Science,
 Belgaum. </pre>
 <hr>
 <h2>My Hobbies</h2>
